<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">


<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/edtFirstNameSignup"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="300dp"
    android:hint="@string/first_name"
    />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtUserNameSignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_username_hint"
        android:layout_below="@id/edtFirstNameSignup"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtPasswordSignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_password_hint"
        android:layout_below="@id/edtUserNameSignup"
        />


<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" android:id="@+id/rbg_gender"
    android:layout_below="@+id/edtPasswordSignup"
    android:layout_centerHorizontal="true"
    android:orientation="horizontal"
    >


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female"
        />


</RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignup"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edtPasswordSignup"
        android:layout_marginTop="70dp"
        android:text="@string/signup"
        />

</RelativeLayout>