<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    >


<EditText
    android:id="@+id/edtUserName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="300dp"
    android:hint="@string/enter_username_hint"
    android:textSize="20sp"
    />



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtPassword"
        android:inputType="textPassword"
        android:layout_below="@id/edtUserName"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_password_hint"
        android:textSize="20sp"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnMainLogin"
        android:text="@string/login"
        android:layout_below="@id/edtPassword"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="80dp"
        />



</RelativeLayout>